# CSC7057

./: .gitignore  README.md
src/: apt.py  azimuth.py  deviceconfig.json  elevation.py  gps.py  imu.py  kalman.py  magtest.py  main.py  misctest.py  motor.py  noaa.txt  savejson.py  setup.cfg  shared.py  testcoloring.py
src/templates/: index.html
src/test/: noaanotoutdated.txt  noaaoutdated.txt  test_apt.py  test_gps.py  test_imu.py  test_kalman.py  test_main.py  test_motor.py  test_shared.py
