[metadata]
name = CSC7057
version = 1.0.0
author = Matthew Gregg
author_email = mgregg05@qub.ac.uk
description = An antenna rotator project
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src